--- a/public/css/app.css
+++ b/public/css/app.css
@@ -123,10 +123,29 @@ h6 {
   left: -10px;
 }
 
-.section-one {
+.section-header {
   background-image: var(--gradient);
   height: 100vh;
   min-height: 300px;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 24%, 83% 80%, 0 100%, 0% 50%);
+          clip-path: polygon(0 0, 100% 0, 100% 24%, 83% 80%, 0 100%, 0% 50%);
+}
+
+.section-services {
+  background-color: #e9e9e9;
+  background-image: url("/img/amber-and-emerald-logo.svg");
+  background-repeat: no-repeat;
+  background-size: 600px;
+  -webkit-clip-path: polygon(0 28%, 100% 0, 100% 76%, 0% 100%);
+          clip-path: polygon(0 28%, 100% 0, 100% 76%, 0% 100%);
+  height: 100%;
+  width: 100%;
+  overflow: visible;
+  padding: 50px 0px;
+}
+
+p {
+  font-size: 1.3rem;
 }
 
 .subhead {
@@ -175,4 +194,32 @@ footer a {
 .scale:hover {
   transform: scale(1);
   filter: grayscale(0);
+}
+
+.portfolio-item h3 {
+  font-size: 2.2rem;
+}
+
+.portfolio-item .tech span {
+  display: inline-block;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  color: grey;
+  letter-spacing: 0.2rem;
+}
+
+.portfolio-item .tech ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  list-style: none;
+  padding-left: 0px;
+}
+
+.portfolio-item .tech li {
+  padding: 5px 20px;
+  background-color: #e9e9e9;
+  color: grey;
+  margin-right: 10px;
 }
