--- a/public/css/app.css
+++ b/public/css/app.css
@@ -40,9 +40,25 @@ h6 {
     color: white;
     text-decoration: none;
     padding: 10px 20px !important;
+    font-size: 1.3rem;
   }
   nav ul li a:hover {
     color: white;
+  }
+  .section-header {
+    -webkit-clip-path: none !important;
+            clip-path: none !important;
+  }
+  .section-services {
+    -webkit-clip-path: none !important;
+            clip-path: none !important;
+    background-image: none !important;
+  }
+  .box {
+    border-left: 2px solid var(--pink);
+    min-height: unset !important;
+    margin-bottom: 20px;
+    box-shadow: -1px -1px 11px 3px #d0d0d0;
   }
 }
 
@@ -70,6 +86,7 @@ h6 {
     color: white;
     text-decoration: none;
     padding: 10px 20px !important;
+    font-size: 1rem;
   }
   nav ul li a:hover {
     color: white;
@@ -126,9 +143,14 @@ h6 {
 .section-header {
   background-image: var(--gradient);
   height: 100vh;
-  min-height: 300px;
+  min-height: 800px;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 24%, 83% 80%, 0 100%, 0% 50%);
           clip-path: polygon(0 0, 100% 0, 100% 24%, 83% 80%, 0 100%, 0% 50%);
+}
+
+.section-header p {
+  font-weight: 100;
+  font-size: 1.9rem;
 }
 
 .section-services {
@@ -136,6 +158,7 @@ h6 {
   background-image: url("/img/amber-and-emerald-logo.svg");
   background-repeat: no-repeat;
   background-size: 600px;
+  background-position-x: 10%;
   -webkit-clip-path: polygon(0 28%, 100% 0, 100% 76%, 0% 100%);
           clip-path: polygon(0 28%, 100% 0, 100% 76%, 0% 100%);
   height: 100%;
@@ -221,5 +244,46 @@ footer a {
   padding: 5px 20px;
   background-color: #e9e9e9;
   color: grey;
-  margin-right: 10px;
+  margin: 0px 10px 10px 0px;
+}
+
+.draw-out {
+  fill: transparent;
+  stroke: #4e4e4e;
+  stroke-width: 1px;
+  stroke-dasharray: 2040px;
+  stroke-dashoffset: -2040px;
+  transition: stroke-dashoffset 2s linear 0.8s, fill 0.8s ease;
+}
+
+.draw-in {
+  fill: #4e4e4e;
+  stroke: #4e4e4e;
+  stroke-dashoffset: 0px;
+  transition: stroke-dashoffset 2s linear, fill 0.8s ease 2s;
+}
+
+.short-line {
+  width: 25%;
+  max-width: 100px;
+  min-height: 3px;
+  opacity: 1;
+}
+
+.icon {
+  width: 100%;
+  max-width: 80px;
+  padding-bottom: 20px;
+  fill: var(--pink);
+}
+
+.box {
+  min-height: 350px;
+  transition: all ease-in-out 0.5s;
+  padding: 30px;
+}
+
+.box:hover {
+  box-shadow: -1px -1px 11px 3px #d0d0d0;
+  transform: translate(0px, -20px);
 }
