--- a/public/css/app.css
+++ b/public/css/app.css
@@ -259,7 +259,6 @@ footer a {
   width: 100%;
   -webkit-clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
           clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
-  background-color: #7dddfa;
   background-image: url("/img/sky.jpg");
   position: absolute;
   top: 50%;
@@ -288,6 +287,28 @@ footer a {
   100% {
     background-position: right;
   }
+}
+
+.gradient {
+  overflow: hidden;
+  position: relative;
+}
+
+.gradient img {
+  max-height: 500px;
+}
+
+.gradient .bg-object {
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0px;
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(#dddddd, #ffb3c1);
+  z-index: -1;
+  -webkit-clip-path: polygon(75% 0, 0% 66%, 100% 100%);
+          clip-path: polygon(75% 0, 0% 66%, 100% 100%);
 }
 
 .portfolio-item h3 {
