--- a/public/css/app.css
+++ b/public/css/app.css
@@ -255,11 +255,11 @@ footer a {
 
 .flexpower .bg-object {
   display: block;
-  height: 100%;
-  width: 100%;
+  height: 90%;
+  width: 90%;
+  background-image: url("/img/sky.jpg");
   -webkit-clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
           clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
-  background-image: url("/img/sky.jpg");
   position: absolute;
   top: 50%;
   left: 50%;
@@ -302,13 +302,34 @@ footer a {
   display: block;
   position: absolute;
   left: 0;
-  bottom: 0px;
-  height: 100%;
-  width: 100%;
-  background-image: linear-gradient(#dddddd, #ffb3c1);
+  bottom: 0;
+  height: 95%;
+  width: 95%;
+  background-image: linear-gradient(90deg, #81018d, #023679);
+  background-size: 500%;
   z-index: -1;
-  -webkit-clip-path: polygon(75% 0, 0% 66%, 100% 100%);
-          clip-path: polygon(75% 0, 0% 66%, 100% 100%);
+  -webkit-clip-path: polygon(75% 0, 0% 66%, 97% 93%);
+          clip-path: polygon(75% 0, 0% 66%, 97% 93%);
+  animation: movegradient infinite alternate-reverse 8s;
+  opacity: 0.7;
+}
+
+@-webkit-keyframes movegradient {
+  0% {
+    background-position: left;
+  }
+  100% {
+    background-position: right;
+  }
+}
+
+@keyframes movegradient {
+  0% {
+    background-position: left;
+  }
+  100% {
+    background-position: right;
+  }
 }
 
 .portfolio-item h3 {
@@ -337,6 +358,7 @@ footer a {
   padding: 2px 15px;
   color: grey;
   border-left: 1px solid lightgray;
+  margin-bottom: 8px;
 }
 
 .draw-out {
