--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -263,8 +263,9 @@ footer {
 
     .bg-object {
         display: block;
-        height: 100%;
-        width: 100%;
+        height: 90%;
+        width: 90%;
+        background-image: url("/img/sky.jpg");
         clip-path: polygon(
             100% 0%,
             75% 50%,
@@ -273,7 +274,6 @@ footer {
             0% 50%,
             25% 0%
         );
-        background-image: url("/img/sky.jpg");
         position: absolute;
         top: 50%;
         left: 50%;
@@ -301,21 +301,29 @@ footer {
 
     img {
         max-height: 500px;
-        // position: absolute;
-        // transform: rotate(-10deg);
-        // top: 0px;
     }
 
     .bg-object {
         display: block;
         position: absolute;
         left: 0;
-        bottom: 0px;
-        height: 100%;
-        width: 100%;
-        background-image: linear-gradient(#dddddd, #ffb3c1);
+        bottom: 0;
+        height: 95%;
+        width: 95%;
+        background-image: linear-gradient(90deg, #81018d, #023679);
+        background-size: 500%;
         z-index: -1;
-        clip-path: polygon(75% 0, 0% 66%, 100% 100%);
+        clip-path: polygon(75% 0, 0% 66%, 97% 93%);
+        animation: movegradient infinite alternate-reverse 8s;
+        opacity: 0.7;
+        @keyframes movegradient {
+            0% {
+                background-position: left;
+            }
+            100% {
+                background-position: right;
+            }
+        }
     }
 }
 
@@ -347,6 +355,7 @@ footer {
             padding: 2px 15px;
             color: grey;
             border-left: 1px solid rgb(211, 211, 211);
+            margin-bottom: 8px;
         }
     }
 }
