--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -400,3 +400,10 @@ footer {
         transform: translate(0px, -20px);
     }
 }
+
+.social {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    margin: 0px 10px 10px 0px;
+}
