--- a/public/css/app.css
+++ b/public/css/app.css
@@ -408,3 +408,57 @@ footer a {
   height: 30px;
   margin: 0px 10px 10px 0px;
 }
+
+.hoverbox {
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 400px;
+  position: relative;
+  overflow: hidden;
+  transition: all ease-in-out 0.3s;
+}
+
+.hoverbox:hover #hoverboxcontent {
+  transform: translateY(0px);
+  opacity: 1;
+}
+
+.hoverbox:hover #hoverbox-title {
+  opacity: 0;
+}
+
+.hoverbox .hoverbox-content {
+  display: block;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.8;
+  background-color: rgba(168, 38, 180, 0.753);
+  position: absolute;
+  transform: translateY(-400px);
+  opacity: 0;
+  color: white;
+  z-index: 5;
+  transition: all ease-in-out 0.4s;
+  text-align: center;
+  padding: 10px;
+}
+
+.hoverbox .hoverbox-title {
+  color: white;
+  position: absolute;
+  font-family: var(--fontheading);
+  font-size: 2.3rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: auto;
+  text-align: center;
+  transition: all ease-in-out 0.4s;
+  text-shadow: 5px 5px 10px black;
+}
