--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -25,6 +25,10 @@ h6 {
     font-family: var(--fontheading);
 }
 
+.heading {
+    font-family: var(--fontheading);
+}
+
 p a {
     color: grey;
     text-decoration: none;
